<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    tools:context=".activity.ContactActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_contact"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gunmetal_800"
        android:theme="@style/Theme.MUNavigation.ToolBar"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_20"
            android:paddingEnd="@dimen/padding_20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:layout_weight="0"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/ic_call"
                    app:tint="@color/sandy_brown" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_3"
                        android:text="@string/phone_number"
                        android:textColor="@color/gunmetal"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_phone_number"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_view_line_bottom_height"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_marginBottom="@dimen/margin_20"
                android:background="@color/teal_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:layout_weight="0"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/ic_email"
                    app:tint="@color/sandy_brown" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_3"
                        android:text="@string/email"
                        android:textColor="@color/gunmetal"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_email"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_view_line_bottom_height"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_marginBottom="@dimen/margin_20"
                android:background="@color/teal_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:layout_weight="0"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/ic_location"
                    app:tint="@color/sandy_brown" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_3"
                        android:text="@string/address"
                        android:textColor="@color/gunmetal"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_address"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_view_line_bottom_height"
                android:layout_marginTop="@dimen/margin_12"
                android:layout_marginBottom="@dimen/margin_20"
                android:background="@color/teal_200" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>