<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bottom_sheet_rounded"
    android:maxHeight="500dp"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_10"
    android:paddingTop="@dimen/padding_20"
    android:paddingEnd="@dimen/padding_10"
    android:paddingBottom="@dimen/padding_40"
    app:behavior_hideable="false"
    app:behavior_peekHeight="294dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:layout_width="52dp"
        android:layout_height="8dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_10"
        android:contentDescription="@string/image_description"
        android:src="@drawable/ic_shape_minimize"
        app:tint="@color/teal_200" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10"
        android:text="@string/location_category"
        android:textColor="@color/gunmetal"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_view_line_bottom_height"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@color/teal_200" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_category_venue"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:adjustViewBounds="true"
                android:background="@drawable/shape_gunmetal_oval"
                android:clickable="true"
                android:contentDescription="@string/venue"
                android:focusable="true"
                android:padding="@dimen/padding_10"
                android:src="@drawable/ic_map"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:text="@string/venue"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_category_hostel"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:adjustViewBounds="true"
                android:background="@drawable/shape_gunmetal_oval"
                android:clickable="true"
                android:contentDescription="@string/hostel"
                android:focusable="true"
                android:padding="@dimen/padding_10"
                android:src="@drawable/ic_local_hotel"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:text="@string/hostel"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_category_office"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:adjustViewBounds="true"
                android:background="@drawable/shape_gunmetal_oval"
                android:clickable="true"
                android:contentDescription="@string/office"
                android:focusable="true"
                android:padding="@dimen/padding_10"
                android:src="@drawable/ic_home"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:text="@string/office"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_category_more"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:adjustViewBounds="true"
                android:background="@drawable/shape_gunmetal_oval"
                android:clickable="true"
                android:contentDescription="@string/more"
                android:focusable="true"
                android:padding="@dimen/padding_10"
                android:src="@drawable/ic_more_horiz"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:text="@string/more"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>