<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bottom_sheet_rounded"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_10"
    android:paddingTop="@dimen/padding_20"
    android:paddingEnd="@dimen/padding_10"
    android:paddingBottom="@dimen/padding_40">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:padding="@dimen/padding_10"
        android:text="@string/direction_view"
        android:textColor="@color/gunmetal"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_street_view"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:clickable="true"
                android:contentDescription="@string/street_map"
                android:focusable="true"
                android:src="@drawable/street_map_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_10"
                android:text="@string/street_map"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_ar_view"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:clickable="true"
                android:contentDescription="@string/augmented_reality"
                android:focusable="true"
                android:src="@drawable/ar_map_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_10"
                android:text="@string/augmented_reality"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>