<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        mapbox:mapbox_cameraTargetLat="-6.805100148396832"
        mapbox:mapbox_cameraTargetLng="37.66345014350327"
        mapbox:mapbox_cameraZoom="11.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/my_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginBottom="340dp"
        android:backgroundTint="@color/sandy_brown"
        android:contentDescription="@string/my_location"
        android:src="@drawable/ic_my_location"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp"
        app:tint="@android:color/white" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/main_bottom_sheet" />

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/gunmetal_800"
            android:paddingStart="@dimen/padding_16"
            android:paddingEnd="@dimen/padding_16"
            app:fabCradleMargin="20dp"
            app:fabCradleRoundedCornerRadius="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawableTop="@drawable/ic_location"
                android:focusable="true"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="5dp"
                android:text="@string/btn_distance"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_settings"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="5dp"
                android:text="@string/btn_setting"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gunmetal_800"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_directions"
            app:backgroundTint="@color/sandy_brown"
            app:borderWidth="4dp"
            app:elevation="6dp"
            app:fabSize="normal"
            app:layout_anchor="@id/bottom_app_bar"
            app:pressedTranslationZ="12dp"
            app:tint="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>