<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LocationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_location"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gunmetal_800"
        android:theme="@style/Theme.MUNavigation.ToolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        mapbox:mapbox_cameraTargetLat="-6.805100148396832"
        mapbox:mapbox_cameraTargetLng="37.66345014350327"
        mapbox:mapbox_cameraZoom="11.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginBottom="300dp"
        android:backgroundTint="@color/sandy_brown"
        android:contentDescription="@string/my_location"
        android:src="@drawable/ic_my_location"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp"
        app:tint="@android:color/white" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/location_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_bottom_sheet_rounded"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_10"
            android:paddingTop="@dimen/padding_20"
            android:paddingEnd="@dimen/padding_10"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <ImageView
                android:layout_width="52dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_10"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_shape_minimize"
                app:tint="@color/teal_200" />

            <android.widget.SearchView
                android:id="@+id/location_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/search_box_background"
                android:iconifiedByDefault="false"
                android:padding="5dp"
                android:queryBackground="@null"
                android:queryHint="Search" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20">

                <LinearLayout
                    android:id="@+id/ll_location_list_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_location_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/recyclerview_location_list" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ProgressBar
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="@color/sandy_brown" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_no_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32"
                    android:gravity="center"
                    android:text="@string/no_search_result"
                    android:textColor="@color/gunmetal_800"
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </RelativeLayout>

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>